--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
         body {
-            background-image: url('photo/background.JPG');
+            background-image: url('background.JPG');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
