--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="css/MD_Style.css" rel="stylesheet" />
+    <link href="MD_Style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="MDmark"><a>MINDDWO INDUSTRIAL</a></div>
